--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,6 +8,8 @@ backend:
     uploadMedia: '[skip ci] Upload “{{path}}”'
     deleteMedia: '[skip ci] Delete “{{path}}”'
 
+local_backend: true
+
 media_folder: static/img
 public_folder: /img
 
@@ -28,7 +30,7 @@ collections:
       - {label: "Tags", name: "tags", widget: "list"}
 
   - name: "pages"
-    label: "Pages"
+    label: "Pages2"
     files:
       - file: "src/pages/index.md"
         label: "Landing Page"
